--- a/HallsAndLabsScheduleGenerator/Views/Home/Index.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Home/Index.cshtml
@@ -4,4 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+
+    <h1 class="display-4">to Our Scheduale Generator Project</h1>
 </div>
