--- a/HallsAndLabsScheduleGenerator/Views/Shared/_Layout.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<IdentityUser> signInManager;
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -25,6 +28,30 @@
                 <li class="nav-item d-none d-sm-inline-block">
                     <a style="color: white" class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                 </li>
+
+                @if (signInManager.IsSignedIn(User))
+                {
+                    <li class="nav-item d-none d-sm-inline-block">
+                        <form method="post" asp-action="logout" asp-controller="account">
+                            <button type="submit" class="nav-link btn btn-link py-0" style="width:auto">
+                                Logout @User.Identity.Name
+                            </button>
+                        </form>
+                    </li>
+                }
+                else
+                {
+                    
+                    <li class="nav-item d-none d-sm-inline-block" style="margin-left:900px">
+                        <a style="color: white" class="nav-link" asp-controller="account" asp-action="login">Login</a>
+                    </li>
+                    <li class="nav-item d-none d-sm-inline-block">
+                        <a style="color: white" class="nav-link" asp-controller="account" asp-action="register">Register</a>
+                    </li>
+
+                }
+
+
             </ul>
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
@@ -107,7 +134,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../../index3.html" class="nav-link">
+                                    <a asp-controller="lab" asp-action="index" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Labs</p>
                                     </a>
