add Teacher controller

--- a/HallsAndLabsScheduleGenerator/Views/Shared/_Layout.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../../index.html" class="nav-link">
+                                    <a asp-controller="Teachers" asp-action="index" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Teatchers</p>
                                     </a>
