--- a/HallsAndLabsScheduleGenerator/Views/Lab/Create.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Lab/Create.cshtml
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item"><a asp-controller="lab" asp-action="index">Labs</a></li>
                         <li class="breadcrumb-item active">Create New Lab</li>
                     </ol>
                 </div>
@@ -32,41 +32,56 @@
                 <!-- left column -->
                 <div class="col-md-12">
                     <!-- jquery validation -->
-                    <div class="card card-teal">
-                        <div class="card-header">
+                    <div class="card card-gray" id="card-size" >
+                        <div class="card-header rounded-0" style="background-color: #44678c">
                             <h3 class="card-title">Create New Lab</h3>
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
-                        <form asp-action="Create">
+                        <form asp-action="Create" id="form-text-color">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            <div class="form-group">
-                                <label asp-for="Name" class="control-label"></label>
-                                <input asp-for="Name" class="form-control" />
-                                <span asp-validation-for="Name" class="text-danger"></span>
+                            <div class="row input-style" >
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Name" class="control-label"></label>
+                                        <input asp-for="Name" class="form-control rounded-0" />
+                                        <span asp-validation-for="Name" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Status" class="control-label"></label>
+                                        <input asp-for="Status" class="form-control rounded-0" />
+                                        <span asp-validation-for="Status" class="text-danger"></span>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label asp-for="Status" class="control-label"></label>
-                                <input asp-for="Status" class="form-control" />
-                                <span asp-validation-for="Status" class="text-danger"></span>
+
+                            <div class="row input-style">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Student Count</label>
+                                        <input asp-for="StudentCount" class="form-control rounded-0" />
+                                        <span asp-validation-for="StudentCount" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Board" class="control-label"></label>
+                                        <input asp-for="Board" class="form-control rounded-0" />
+                                        <span asp-validation-for="Board" class="text-danger"></span>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label asp-for="StudentCount" class="control-label"></label>
-                                <input asp-for="StudentCount" class="form-control" />
-                                <span asp-validation-for="StudentCount" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="Board" class="control-label"></label>
-                                <input asp-for="Board" class="form-control" />
-                                <span asp-validation-for="Board" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
+                          
+                            <div class="form-group input-style">
                                 <label asp-for="Projector" class="control-label"></label>
-                                <input asp-for="Projector" class="form-control" />
+                                <input asp-for="Projector" class="form-control rounded-0" />
                                 <span asp-validation-for="Projector" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
-                                <input type="submit" value="Create" class="btn btn-primary" />
+
+                            <div class="form-group" style="margin-left:20px; margin-right:100px; margin-top:20px; ">
+                                <input type="submit" value="Create" class="btn btn-success btn-flat" style="width: 100px" />
                             </div>
                         </form>
                     </div>
