--- a/HallsAndLabsScheduleGenerator/Views/Lab/Delete.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Lab/Delete.cshtml
@@ -4,48 +4,125 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Lab</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StudentCount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StudentCount)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Board)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Board)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Projector)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Projector)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+
+
+
+<!-- Content Header (Page header) -->
+<section class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1>Delete Lab</h1>
+            </div>
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a asp-controller="lab" asp-action="index">Labs</a></li>
+                    <li class="breadcrumb-item active">Delete Lab</li>
+                </ol>
+            </div>
+        </div>
+    </div><!-- /.container-fluid -->
+</section>
+
+<!-- Main content -->
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <!-- left column -->
+            <div class="col-md-12">
+                <!-- jquery validation -->
+                <div class="card card-gray" id="card-size">
+                    <div class="card-header rounded-0" style="background-color: #44678c">
+                        <h3 class="card-title">Are you sure you want to delete this?</h3>
+                    </div>
+                    <!-- /.card-header -->
+
+                    <div class="row input-style">
+                        <div class="col-md-4">
+                            @Html.DisplayNameFor(model => model.Name) :
+                            @Html.DisplayFor(model => model.Name)
+                        </div>
+                        <div class="col-md-4">
+                            @Html.DisplayNameFor(model => model.Status) :
+                            @Html.DisplayFor(model => model.Status)
+                        </div>
+                        <div class="col-md-4">
+                            Student Count :
+                             @Html.DisplayFor(model => model.StudentCount)
+                        </div>
+                    </div>
+
+                    <div class="row input-style">
+                        <div class="col-md-4">
+                            @Html.DisplayNameFor(model => model.Board) :
+                            @Html.DisplayFor(model => model.Board)
+                        </div>
+                        <div class="col-md-4">
+                            @Html.DisplayNameFor(model => model.Projector) :
+                            @Html.DisplayFor(model => model.Projector)
+                        </div>
+                      
+                    </div>
+
+                    <form asp-action="Delete" style="margin-bottom:30px; margin-top:15px; margin-left:27px"> 
+                        <input type="hidden" asp-for="Id" />
+                        <input type="submit" value="Delete" class="btn btn-danger rounded-0" />     
+                    </form>
+
+
+                    <!-- /.card -->
+                </div>
+          
+                </div>
+            <!--/.col (right) -->
+        </div>
+        <!-- /.row -->
+    </div><!-- /.container-fluid -->
+</section>
+<!-- /.content -->
+@*<h1>Delete</h1>
+
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Lab</h4>
+        <hr />
+        <dl class="row">
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Status)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Status)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.StudentCount)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.StudentCount)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Board)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Board)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Projector)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Projector)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-action="Index">Back to List</a>
+        </form>
+    </div>*@
