--- a/HallsAndLabsScheduleGenerator/Views/Lab/Edit.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Lab/Edit.cshtml
@@ -4,48 +4,149 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
 
-<h4>Lab</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+
+
+
+
+
+<!-- Content Header (Page header) -->
+<section class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1>Edit Lab</h1>
             </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a asp-controller="lab" asp-action="index">Labs</a></li>
+                    <li class="breadcrumb-item active">Edit Lab</li>
+                </ol>
             </div>
-            <div class="form-group">
-                <label asp-for="StudentCount" class="control-label"></label>
-                <input asp-for="StudentCount" class="form-control" />
-                <span asp-validation-for="StudentCount" class="text-danger"></span>
+        </div>
+    </div><!-- /.container-fluid -->
+</section>
+
+<!-- Main content -->
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <!-- left column -->
+            <div class="col-md-12">
+                <!-- jquery validation -->
+                <div class="card card-gray" id="card-size">
+                    <div class="card-header rounded-0" style="background-color: #44678c">
+                        <h3 class="card-title">Edit Lab</h3>
+                    </div>
+                    <!-- /.card-header -->
+                    <!-- form start -->
+                    <form asp-action="Edit" id="form-text-color">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <input type="hidden" asp-for="Id" />
+                        <div class="row input-style">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label asp-for="Name" class="control-label"></label>
+                                    <input asp-for="Name" class="form-control rounded-0" />
+                                    <span asp-validation-for="Name" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label asp-for="Status" class="control-label"></label>
+                                    <input asp-for="Status" class="form-control rounded-0" />
+                                    <span asp-validation-for="Status" class="text-danger"></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row input-style">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label>Student Count</label>
+                                    <input asp-for="StudentCount" class="form-control rounded-0" />
+                                    <span asp-validation-for="StudentCount" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label asp-for="Board" class="control-label"></label>
+                                    <input asp-for="Board" class="form-control rounded-0" />
+                                    <span asp-validation-for="Board" class="text-danger"></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group input-style">
+                            <label asp-for="Projector" class="control-label"></label>
+                            <input asp-for="Projector" class="form-control rounded-0" />
+                            <span asp-validation-for="Projector" class="text-danger"></span>
+                        </div>
+
+                        <div class="form-group" style="margin-left:20px; margin-right:100px; margin-top:20px; ">
+                            <input type="submit" value="Save" class="btn btn-success btn-flat" style="width: 100px" />
+                        </div>
+                    </form>
+                </div>
+                <!-- /.card -->
             </div>
-            <div class="form-group">
-                <label asp-for="Board" class="control-label"></label>
-                <input asp-for="Board" class="form-control" />
-                <span asp-validation-for="Board" class="text-danger"></span>
+            <!--/.col (left) -->
+            <!-- right column -->
+            <div class="col-md-6">
+
             </div>
-            <div class="form-group">
-                <label asp-for="Projector" class="control-label"></label>
-                <input asp-for="Projector" class="form-control" />
-                <span asp-validation-for="Projector" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+            <!--/.col (right) -->
+        </div>
+        <!-- /.row -->
+    </div><!-- /.container-fluid -->
+</section>
+<!-- /.content -->
+
+
+
+
+@*<h1>Edit</h1>
+
+    <h4>Lab</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Id" />
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Status" class="control-label"></label>
+                    <input asp-for="Status" class="form-control" />
+                    <span asp-validation-for="Status" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="StudentCount" class="control-label"></label>
+                    <input asp-for="StudentCount" class="form-control" />
+                    <span asp-validation-for="StudentCount" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Board" class="control-label"></label>
+                    <input asp-for="Board" class="form-control" />
+                    <span asp-validation-for="Board" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Projector" class="control-label"></label>
+                    <input asp-for="Projector" class="form-control" />
+                    <span asp-validation-for="Projector" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>*@
 
