--- a/HallsAndLabsScheduleGenerator/Views/Lab/Index.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Lab/Index.cshtml
@@ -54,21 +54,21 @@
                             <tbody>
                                 @foreach (var item in Model)
                                 {
-                                <tr>
-                                    <td>@item.Name</td>
-                                    <td>@item.Status</td>
-                                    <td>@item.StudentCount</td>
-                                    <td>@item.Board</td>
-                                    <td>@item.Projector</td>
-                                    <td class="project-actions">
-                                        <a class="btn btn-success" data-toggle="tooltip" data-placement="left" title="View Project" data-original-title="Tooltip on left" hasp-action="Details" asp-route-id="@item.Id"><i class="fa fa-eye"></i></a>
-                                        <a class="btn btn-warning" data-toggle="tooltip" data-placement="left" title="Edit Project" data-original-title="Tooltip on left"asp-action="Edit" asp-route-id="@item.Id"><i style="color:white" class="fa fa-pen"></i></a>
-                                        <button class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Delete Project" data-original-title="Tooltip on left" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash"></i></button>
-
-                                    </td>
-                                </tr>
+                                    <tr>
+                                        <td>@item.Name</td>
+                                        <td>@item.Status</td>
+                                        <td>@item.StudentCount</td>
+                                        <td>@item.Board</td>
+                                        <td>@item.Projector</td>
+                                        <td class="project-actions">
+                                            <a class="btn btn-warning" data-toggle="tooltip" data-placement="left" title="Edit Lab" data-original-title="Tooltip on left" asp-action="Edit" asp-route-id="@item.Id"><i style="color:white" class="fa fa-pen"></i></a>
+                                            <a class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Delete Lab" data-original-title="Tooltip on left" asp-action="Delete"  asp-route-id="@item.Id"><i class="fa fa-trash"></i></a>      
+                                        </td>
+                                    </tr>
                                 }
 
+
+                             
 
                             </tbody>
                           
@@ -86,6 +86,25 @@
 </section>
 <!-- /.content -->
 
+<!--<div class="modal fade" id="modal-danger">
+    <div class="modal-dialog">
+        <div class="modal-content bg-danger">
+            <div class="modal-header">
+                <h4 class="modal-title">Are you sure you want to delete this item?</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+         
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-outline-light" id="close" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-light" id="deleteBtn" >Delete</button>
+            </div>
+        </div>-->
+        <!-- /.modal-content -->
+    <!--</div>-->
+    <!-- /.modal-dialog -->
+<!--</div>-->
 
 @section Scripts{
 
@@ -120,7 +139,43 @@
                 "autoWidth": false,
                 "responsive": true,
             });
-        });</script>
+        });
+
+
+
+        //$("body").on('click', '.btn-danger', function (event) {
+        //    var $btndel = $(this);
+        //    var deleteButton = document.getElementById('deleteBtn');
+
+        //    deleteButton.addEventListener('click', function (e) {
+
+        //        var id = $btndel.data("id");
+        //        console.log("Id= " + id);
+                
+        //        $.ajax({
+        //            type: "POST",
+        //            url: "/Lab/Delete/" + id,
+        //           // data: { id: id },
+        //           //data: JSON.stringify(id),
+        //            contentType: "application/json; charset=utf-8",
+        //            dataType: "json",
+        //            success: function (data) {
+        //                if (data != null) {
+        //                    $("#modal-danger").modal("close");
+        //                } else {
+        //                    alert("Customer record not found.");
+        //                }
+        //            }
+        //        });
+        //    });
+
+        //});
+        
+
+
+
+
+    </script>
 
 
 }
