--- a/HallsAndLabsScheduleGenerator/Views/Shared/_Layout.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../../index2.html" class="nav-link">
+                                    <a asp-controller="subject" asp-action="index" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Subjects</p>
                                     </a>
