--- a/HallsAndLabsScheduleGenerator/Views/Hall/_deleteHallPartialView.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Hall/_deleteHallPartialView.cshtml
@@ -1,13 +1,12 @@
-﻿@model ShedualeGenerator.Models.Subject
+﻿@model ShedualeGenerator.Models.Hall
 
 
 
-
-<div class="modal fade" id="DeleteSubject-@Model.Id">
+<div class="modal fade" id="DeleteHall-@Model.Id">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Delete Subject</h4>
+                <h4 class="modal-title">Delete Hall</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -17,12 +16,12 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <input type="hidden" asp-for="Id" />
-                        <p>Are you sure to delete this subject?<p>
+                        <p>Are you sure to delete this hall?<p>
                     </div>
-                   
+
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default  btn-flat" data-dismiss="modal">Close</button>
-                        <input type="submit" value="Delete" class="btn btn-danger btn-flat"/>
+                        <input type="submit" value="Delete" class="btn btn-danger btn-flat" />
                     </div>
                 </form>
             </div>
@@ -31,18 +30,3 @@
     </div>
     <!-- /.modal-dialog -->
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
