--- a/HallsAndLabsScheduleGenerator/Views/Shared/_Layout.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Shared/_Layout.cshtml
@@ -128,7 +128,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../../index3.html" class="nav-link">
+                                    <a asp-controller="hall" asp-action="index" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Halls</p>
                                     </a>
