--- a/HallsAndLabsScheduleGenerator/Views/Teachers/Create.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Teachers/Create.cshtml
@@ -12,7 +12,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" id="createForm">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -47,10 +47,14 @@
 
             </section>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" id="creatBtn"/>
+                <input type="hidden"  id="ListOfIds" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Creat" class="btn btn-primary" id="creatBtn" />
             </div>
 
         </form>
+        
     </div>
 </div>
 
@@ -58,67 +62,14 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-
-
 <script type="text/javascript">
     var SubjectIdsList = [];
     var counter = 0;
-
-
-
-
-
-
-
-    function createNodes(Sname, Semester) {
-        var div1 = document.createElement("div");
-        div1.style.width = 'min-content';
-        div1.classList.add("card", "alert");
-
-        var div2 = document.createElement("div");
-        div2.classList.add("info-box-content", "mb-4");
-
-        var div3 = document.createElement("div");
-        div3.classList.add("card-body");
-        div3.setAttribute("id", "divparent");
-
-        var btn = document.createElement("button");
-        btn.setAttribute("type", "button");
-        btn.setAttribute("data-dismiss", "alert");
-        btn.setAttribute("onclick", "createOption(this)");
-        btn.textContent = "x";
-
-
-        var p1 = document.createElement("p");
-        p1.classList.add("info-box-text");
-        p1.setAttribute("id","SubjectName")
-        p1.textContent = Sname;
-
-        var p2 = document.createElement("p");
-        p2.classList.add("info-box-text");
-        p2.textContent = Semester;
-
-        div3.appendChild(btn);
-        div3.appendChild(p1);
-        div3.appendChild(p2);
-
-        div1.appendChild(div2).appendChild(div3);
-
-        document.getElementById("SubjectGroup").appendChild(div1);
-
-
-    }
-
-
-
-
-
-
-
-
     $(document).ready(function () {
 
         var selList = document.getElementById("SubjectListId");
+        
+
         $("#SubjectListId").change(function () {
 
             $.ajax({
@@ -131,9 +82,11 @@
                     createNodes(data[0].name, data[0].semester);
                     $('#SubjectListId option:selected').remove();
 
+
+                  
                     SubjectIdsList[counter] = $("#SubjectListId").val();
                     counter++;
-
+                    alert(SubjectIdsList);
                 },
                 error: function (req, status, error) {
                     console.log(msg);
@@ -147,25 +100,39 @@
 
 
 
-        var createbtn = document.getElementById("creatBtn");
-        createbtn.onclick(function () {
-            console.log(SubjectIdsList);
-            $.ajax({
-                type: "GET",
-                url: "/Teachers/AssignSubjectIds/",
-                caches: false,
-                data: SubjectIdsList,
-                dataType: "JSON",
-                traditional: true,
-                success: function (data) {
-                    alert("Ok")
-                },
-                error: function (req, status, error) {
-                    console.log(msg);
-                }
-            });
+        //var createbtn = document.getElementById("creatBtn");
+        //createbtn.onclick(function () {
+        //    alert("in the btn");
+        //    console.log(SubjectIdsList);
+        //    $.ajax({
+        //        type: "GET",
+        //        url: "/Teachers/AssignSubjectIds/",
+        //        caches: false,
+        //        data: JSON.stringify(SubjectIdsList),
+        //        dataType: "JSON",
+        //        traditional: true,
+        //        success: function (data) {
+        //            alert("Ok")
+        //        },
+        //        error: function (req, status, error) {
+        //            console.log(msg);
+        //        }
+        //    });
 
-        })
+        //});
+
+
+
+
+
+        //var form = document.getElementById("createForm");
+
+        //form.subm(function () {
+        //    alert("in Submit");
+        //});
+
+
+
     });
 
     function createOption(btn) {
@@ -193,15 +160,59 @@
                         counter--;
                     }
                 }
-              
-               
+
+                alert(SubjectIdsList);
             },
             error: function (req, status, error) {
                 console.log(msg);
             }
         });
     }
+  
 
+
+
+
+
+
+    function createNodes(Sname, Semester) {
+        var div1 = document.createElement("div");
+        div1.style.width = 'min-content';
+        div1.classList.add("card", "alert");
+
+        var div2 = document.createElement("div");
+        div2.classList.add("info-box-content", "mb-4");
+
+        var div3 = document.createElement("div");
+        div3.classList.add("card-body");
+        div3.setAttribute("id", "divparent");
+
+        var btn = document.createElement("button");
+        btn.setAttribute("type", "button");
+        btn.setAttribute("data-dismiss", "alert");
+        btn.setAttribute("onclick", "createOption(this)");
+        btn.textContent = "x";
+
+
+        var p1 = document.createElement("p");
+        p1.classList.add("info-box-text");
+        p1.setAttribute("id", "SubjectName")
+        p1.textContent = Sname;
+
+        var p2 = document.createElement("p");
+        p2.classList.add("info-box-text");
+        p2.textContent = Semester;
+
+        div3.appendChild(btn);
+        div3.appendChild(p1);
+        div3.appendChild(p2);
+
+        div1.appendChild(div2).appendChild(div3);
+
+        document.getElementById("SubjectGroup").appendChild(div1);
+
+
+    }
 
 </script>
 
