--- a/HallsAndLabsScheduleGenerator/Views/Account/Login.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Account/Login.cshtml
@@ -34,8 +34,8 @@
                         <form method="post" class="signin-form">
                             <div asp-validation-summary="All" class="text-danger"></div>
                             <div class="form-group">
-                                <input type="text" asp-for="Email" class="form-control" placeholder="Email" required>
-                                <span asp-validation-for="Email" class="text-danger"></span>
+                                <input type="text" asp-for="UserName" class="form-control" placeholder="User name" required>
+                                <span asp-validation-for="UserName" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <input id="password-field" type="password" asp-for="Password" class="form-control" placeholder="Password" required>
