--- a/HallsAndLabsScheduleGenerator/Views/Account/_deleteUserPartialViewcshtml.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Account/_deleteUserPartialViewcshtml.cshtml
@@ -1,24 +1,25 @@
-﻿@model ShedualeGenerator.Models.Lab
+﻿@using Microsoft.AspNetCore.Identity;
+@model IdentityUser
 
 
 
 
 
-<div class="modal fade" id="DeleteSubject-@Model.Id">
+<div class="modal fade" id="DeleteUser-@Model.Id">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-               <h4 class="modal-title" style="margin-left:33%">Delete Subject</h4>
+                <h4 class="modal-title" style="margin-left:33%">Delete Subject</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="">
-                <form asp-action="Delete">
+                <form asp-action="DeleteUser">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <input type="hidden" asp-for="Id" />
-                        <p style="margin-top:15px;margin-left:25%;margin-bottom:30px">Are you sure to delete this Lab?<p>
+                        <p style="margin-top:15px;margin-left:25%;margin-bottom:30px">Are you sure to delete this user?<p>
                     </div>
 
                     <div style="margin-left:80px;margin-right:20px;margin-bottom:20px">
