--- a/HallsAndLabsScheduleGenerator/Views/Hall/_deleteHallPartialView.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Hall/_deleteHallPartialView.cshtml
@@ -2,26 +2,28 @@
 
 
 
+
+
 <div class="modal fade" id="DeleteHall-@Model.Id">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Delete Hall</h4>
+                <h4 class="modal-title" style="margin-left:33%">Delete Subject</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <div class="">
                 <form asp-action="Delete">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <input type="hidden" asp-for="Id" />
-                        <p>Are you sure to delete this hall?<p>
+                        <p style="margin-top:15px;margin-left:25%;margin-bottom:30px">Are you sure to delete this hall?<p>
                     </div>
 
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default  btn-flat" data-dismiss="modal">Close</button>
-                        <input type="submit" value="Delete" class="btn btn-danger btn-flat" />
+                    <div style="margin-left:80px;margin-right:20px;margin-bottom:20px">
+                        <button type="button" style="width:170px" class="btn btn-default  btn-flat" data-dismiss="modal">Close</button>
+                        <input type="submit" style="width:170px" value="Delete" class="btn btn-danger btn-flat" />
                     </div>
                 </form>
             </div>
@@ -30,3 +32,5 @@
     </div>
     <!-- /.modal-dialog -->
 </div>
+
+
