--- a/HallsAndLabsScheduleGenerator/Views/Shared/_Layout.cshtml
+++ b/HallsAndLabsScheduleGenerator/Views/Shared/_Layout.cshtml
@@ -29,35 +29,34 @@
                     <a style="color: white" class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                 </li>
 
+
+            </ul>
+          
+            <!-- Right navbar links -->
+            <ul class="navbar-nav ml-auto" >
+                <!-- Navbar Search -->
+
                 @if (signInManager.IsSignedIn(User))
                 {
                     <li class="nav-item d-none d-sm-inline-block">
                         <form method="post" asp-action="logout" asp-controller="account">
-                            <button type="submit" class="nav-link btn btn-link py-0" style="width:auto">
-                                Logout @User.Identity.Name
+                            <button type="submit" class="nav-link btn btn-link py-0" style="width:auto; color:white;">
+                                @User.Identity.Name  | Logout
                             </button>
                         </form>
                     </li>
                 }
                 else
                 {
-                    
                     <li class="nav-item d-none d-sm-inline-block" style="margin-left:900px">
                         <a style="color: white" class="nav-link" asp-controller="account" asp-action="login">Login</a>
                     </li>
                     <li class="nav-item d-none d-sm-inline-block">
                         <a style="color: white" class="nav-link" asp-controller="account" asp-action="register">Register</a>
                     </li>
-
                 }
-
-
-            </ul>
-            <!-- Right navbar links -->
-            <ul class="navbar-nav ml-auto">
-                <!-- Navbar Search -->
                 <li class="nav-item">
-                    <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
+                    <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button" style="width:auto; color:white;">
                         <i class="fas fa-th-large"></i>
                     </a>
                 </li>
@@ -110,7 +109,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="../../index.html" class="nav-link">
+                                    <a asp-controller="account" asp-action="index" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Users</p>
                                     </a>
